; ModuleID = '/home/carl/AnghaBench/linux/fs/dlm/extr_config.c_cluster_cluster_name_show.c'
source_filename = "/home/carl/AnghaBench/linux/fs/dlm/extr_config.c_cluster_cluster_name_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_item = type { i32 }
%struct.dlm_cluster = type { i8* }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_item*, i8*)* @cluster_cluster_name_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cluster_cluster_name_show(%struct.config_item* %0, i8* %1) #0 {
  %3 = alloca %struct.config_item*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.dlm_cluster*, align 8
  store %struct.config_item* %0, %struct.config_item** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.config_item*, %struct.config_item** %3, align 8
  %7 = call %struct.dlm_cluster* @config_item_to_cluster(%struct.config_item* %6)
  store %struct.dlm_cluster* %7, %struct.dlm_cluster** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load %struct.dlm_cluster*, %struct.dlm_cluster** %5, align 8
  %10 = getelementptr inbounds %struct.dlm_cluster, %struct.dlm_cluster* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @sprintf(i8* %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %11)
  ret i32 %12
}

declare dso_local %struct.dlm_cluster* @config_item_to_cluster(%struct.config_item*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
